--- a/presentation_1.tex
+++ b/presentation_1.tex
@@ -79,9 +79,9 @@
 \usepackage{graphicx} % Allows including images
 \usepackage{booktabs} % Allows the use of \toprule, \midrule and \bottomrule in tables
 
-\usepackage[russian,english]{babel}
-\usepackage[T2A]{fontenc}
 \usepackage[utf8]{inputenc}
+\usepackage[T2A]{fontenc}
+\usepackage[russian,english]{babel}
 
 
 %----------------------------------------------------------------------------------------
@@ -97,7 +97,7 @@
 %\medskip
 %\textit{yadummer@gmail.com} % Your email address
 %}
-\date{\today} % Date, can be changed to a custom date
+\date{17.03.15} % \today % Date, can be changed to a custom date
 
 \begin{document}
 
@@ -116,10 +116,12 @@
 
 \section{Что такое и зачем}
 
-\begin{frame}
-\frametitle{Определяемся}
+\subsection{Определение}
 
-\begin{block}{Псевдонимы/Алиасы}
+\begin{frame}
+\frametitle{Определение}
+
+\begin{block}{Псевдонимы / Алиасы}
 Два указателя a и b будем называть псевдонимами, если они указывают на одну и ту же область памяти.
 \end{block}
 
@@ -136,157 +138,72 @@ Cтатически (на этапе компиляции) определить 
 \end{frame}
 
 \begin{frame}
-\frametitle{Почему анализ псевдонимов необходим}
+\frametitle{Почему анализ псевдонимов важен}
+
+\begin{block}{Для уточнения других анализов}
+Результаты некоторых анализов можно уточнить, если знать взаимоотношения между данными, которые участвуют в анализе.
+\end{block}
+
+\begin{block}{Для проверки выполнения предусловий применения преобразований}
+У некоторых преобразований есть предусловия связанные с псевдонимами, которые разрешают применять их только если какие-то указатели точно псевдонимы или точно не псевдонимы.
+\end{block}
+
+\end{frame}
+
+\begin{frame}
+\frametitle{Классификация анализов}
+
+\begin{block}{context-sensitive / context-insensitive}
+Чувствительность к параметрам вызова анализируемой функции/процедуры.
+\end{block}
+
+\begin{block}{flow-sensitive / flow-insensitive}
+Чувствительность к местам вхождений переданных указателей.
+\end{block}
+
+\begin{block}{field-sensitive / field-insensitive}
+Различение разных полей структуры.
+\end{block}
+
+\begin{block}{type-based / flow-based}
+Анализ основан на анализе типов (для языков вроде Haskell или Java) или на анализе потока управления программы (для языков со ссылками и приведением типов).
+\end{block}
+
+
+\end{frame}
+
+\subsection{Подходы к анализу в LLVM}
+
+\begin{frame}
+\frametitle{Подходы к анализу в LLVM}
 
 \begin{enumerate}
-\item для уточнения других анализов
-\item для проверки выполнения предусловий применения преобразований
-\end{enumerate}
-\end{frame}
-
-%------------------------------------------------
-\section{First Section} % Sections can be created in order to organize your presentation into discrete blocks, all sections and subsections are automatically printed in the table of contents as an overview of the talk
-%------------------------------------------------
-
-\subsection{Subsection Example} % A subsection can be created just before a set of slides with a common theme to further break down your presentation into chunks
-
-\begin{frame}
-\frametitle{Paragraphs of Text}
-Sed iaculis dapibus gravida. Morbi sed tortor erat, nec interdum arcu. Sed id lorem lectus. Quisque viverra augue id sem ornare non aliquam nibh tristique. Aenean in ligula nisl. Nulla sed tellus ipsum. Donec vestibulum ligula non lorem vulputate fermentum accumsan neque mollis.\\~\\
-
-Sed diam enim, sagittis nec condimentum sit amet, ullamcorper sit amet libero. Aliquam vel dui orci, a porta odio. Nullam id suscipit ipsum. Aenean lobortis commodo sem, ut commodo leo gravida vitae. Pellentesque vehicula ante iaculis arcu pretium rutrum eget sit amet purus. Integer ornare nulla quis neque ultrices lobortis. Vestibulum ultrices tincidunt libero, quis commodo erat ullamcorper id.
-\end{frame}
-
-%------------------------------------------------
-
-\begin{frame}
-\frametitle{Bullet Points}
-\begin{itemize}
-\item Lorem ipsum dolor sit amet, consectetur adipiscing elit
-\item Aliquam blandit faucibus nisi, sit amet dapibus enim tempus eu
-\item Nulla commodo, erat quis gravida posuere, elit lacus lobortis est, quis porttitor odio mauris at libero
-\item Nam cursus est eget velit posuere pellentesque
-\item Vestibulum faucibus velit a augue condimentum quis convallis nulla gravida
-\end{itemize}
-\end{frame}
-
-%------------------------------------------------
-
-\begin{frame}
-\frametitle{Blocks of Highlighted Text}
-\begin{block}{Block 1}
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer lectus nisl, ultricies in feugiat rutrum, porttitor sit amet augue. Aliquam ut tortor mauris. Sed volutpat ante purus, quis accumsan dolor.
-\end{block}
-
-\begin{block}{Block 2}
-Pellentesque sed tellus purus. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Vestibulum quis magna at risus dictum tempor eu vitae velit.
-\end{block}
-
-\begin{block}{Block 3}
-Suspendisse tincidunt sagittis gravida. Curabitur condimentum, enim sed venenatis rutrum, ipsum neque consectetur orci, sed blandit justo nisi ac lacus.
-\end{block}
-\end{frame}
-
-%------------------------------------------------
-
-\begin{frame}
-\frametitle{Multiple Columns}
-\begin{columns}[c] % The "c" option specifies centered vertical alignment while the "t" option is used for top vertical alignment
-
-\column{.45\textwidth} % Left column and width
-\textbf{Heading}
-\begin{enumerate}
-\item Statement
-\item Explanation
-\item Example
+\item NoAA - На все запросы отвечать "я не знаю".
+\item BasicAA - Баланс между скоростью и числом упрощений.
+\item Steensgaard’s algorithm - межпроцедурный анализ с хорошей скоростью работы, но с большим числом упрощений.
 \end{enumerate}
 
-\column{.5\textwidth} % Right column and width
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer lectus nisl, ultricies in feugiat rutrum, porttitor sit amet augue. Aliquam ut tortor mauris. Sed volutpat ante purus, quis accumsan dolor.
-
-\end{columns}
+При использовании нескольких, анализы используются по цепочке, передавая свой результат следующему на вход.
 \end{frame}
 
-%------------------------------------------------
-\section{Second Section}
-%------------------------------------------------
+\section{Анализ псевдонимов в ОРС}
 
 \begin{frame}
-\frametitle{Table}
-\begin{table}
-\begin{tabular}{l l l}
-\toprule
-\textbf{Treatments} & \textbf{Response 1} & \textbf{Response 2}\\
-\midrule
-Treatment 1 & 0.0003262 & 0.562 \\
-Treatment 2 & 0.0015681 & 0.910 \\
-Treatment 3 & 0.0009271 & 0.296 \\
-\bottomrule
-\end{tabular}
-\caption{Table caption}
-\end{table}
-\end{frame}
+\frametitle{Анализ псевдонимов в ОРС}
+\begin{block}{По классификации}
+Анализ псевдонимов в ОРС context-insensitive, flow-sensitive, field-sensitive (по умолчанию. Может быть и field-insensitive), flow-based.
+\end{block}
 
-%------------------------------------------------
+\begin{block}{Использование}
+Среди преобразований реализацию анализа псевдонимов в ОРС использует только канонизация циклов.
+Это связано в первую очередь с очень долгой работой анализа.
+\end{block}
+\end{frame}
 
 \begin{frame}
-\frametitle{Theorem}
-\begin{theorem}[Mass--energy equivalence]
-$E = mc^2$
-\end{theorem}
-\end{frame}
-
-%------------------------------------------------
-
-\begin{frame}[fragile] % Need to use the fragile option when verbatim is used in the slide
-\frametitle{Verbatim}
-\begin{example}[Theorem Slide Code]
-\begin{verbatim}
-\begin{frame}
-\frametitle{Theorem}
-\begin{theorem}[Mass--energy equivalence]
-$E = mc^2$
-\end{theorem}
-\end{frame}\end{verbatim}
-\end{example}
-\end{frame}
-
-%------------------------------------------------
-
-\begin{frame}
-\frametitle{Figure}
-Uncomment the code on this slide to include your own image from the same directory as the template .TeX file.
-%\begin{figure}
-%\includegraphics[width=0.8\linewidth]{test}
-%\end{figure}
-\end{frame}
-
-%------------------------------------------------
-
-\begin{frame}[fragile] % Need to use the fragile option when verbatim is used in the slide
-\frametitle{Citation}
-An example of the \verb|\cite| command to cite within the presentation:\\~
-
-This statement requires citation \cite{p1}.
-\end{frame}
-
-%------------------------------------------------
-
-\begin{frame}
-\frametitle{References}
-\footnotesize{
-\begin{thebibliography}{99} % Beamer does not support BibTeX so references must be inserted manually as below
-\bibitem[Smith, 2012]{p1} John Smith (2012)
-\newblock Title of the publication
-\newblock \emph{Journal Name} 12(3), 45 -- 678.
-\end{thebibliography}
-}
-\end{frame}
-
-%------------------------------------------------
-
-\begin{frame}
-\Huge{\centerline{The End}}
+\Huge{\centerline{Спасибо за внимание.}}
+\bigskip
+\large{\centerline{Вопросы.}}
 \end{frame}
 
 %----------------------------------------------------------------------------------------
