--- a/presentation_1.tex
+++ b/presentation_1.tex
@@ -224,27 +224,29 @@ Cтатически (на этапе компиляции) определить 
 
 %-----------------------------------------------------------------------------------------
 
-\subsection{Подходы к анализу в LLVM}
-
 \begin{frame}
-\frametitle{Подходы к анализу в LLVM}
+\frametitle{Рассмотренные подходы к анализу псевдонимов}
 
 \begin{enumerate}
-\item NoAA - На все запросы отвечать "я не знаю".
-\item BasicAA - Баланс между скоростью и числом упрощений.
-\item Steensgaard’s algorithm - межпроцедурный анализ с хорошей скоростью работы, но с большим числом упрощений.
+\item BasicAA -- Основной анализ использующийся в LLVM
+\item Steensgaard’s algorithm -- Алгоритм межпроцедурный анализа с хорошей скоростью работы, но с большим числом упрощений.
+\item Partial Transfer Functions -- Подход к анализу, который строит отображения из контекста вызова в контекст после вызова функции.
 \end{enumerate}
 
-При использовании нескольких, анализы используются по цепочке, передавая свой результат следующему на вход.
+При наличии в компиляторе нескольких реализаций анализа, они могут использоватся по цепочке для построения общего неточного результата и уточнения критичных частей.
 \end{frame}
 
 %-----------------------------------------------------------------------------------------
 %-----------------------------------------------------------------------------------------
-\section{Анализ псевдонимов в ОРС}
+\section{Существующий анализ псевдонимов в ОРС}
 %-----------------------------------------------------------------------------------------
 
 \begin{frame}
-\frametitle{Анализ псевдонимов в ОРС}
+\frametitle{Существующий анализ псевдонимов в ОРС}
+
+\begin{block}{}
+Существующий в ОРС анализ псевдонимов осуществляет для каждой процедуры обход факторизованного графа потока управления с накоплением результатов анализа и анализирует вызовы функций для каждого контекста отдельно.
+\end{block}
 
 \begin{block}{По классификации}
 Анализ псевдонимов в ОРС context-insensitive, flow-sensitive, field-sensitive (по умолчанию. Может быть и field-insensitive), flow-based.
@@ -254,18 +256,55 @@ Cтатически (на этапе компиляции) определить 
 
 %-----------------------------------------------------------------------------------------
 %-----------------------------------------------------------------------------------------
-\section{Реализация}
+\section{Оптимизация существующего анализа}
 %-----------------------------------------------------------------------------------------
 
 \begin{frame}
-\frametitle{Полученное ускорение}
+\frametitle{Оптимизация существующего анализа}
 
-\begin{block}{Оптимизация обхода ветвлений в управляющем графе}
-К сожалению, дала очень небольшой эффект и только на процедурах специального вида
+\begin{block}{}
+В существующем анализе было обнаружено два потенциальных места ускорения:
 \end{block}
 
+\begin{block}{В интропроцедурной части анализа}
+В случаях, когда в процедуре имелось множество расходящихся и сходящихся веток полный обход всех путей от входа до выхода занимает значительное время.
+\end{block}
+
+\begin{block}{В интерпроцедурной части анализа}
+Существующий алгоритм производит детальный анализ для каждого места вызова функции, что оказывается излишним во многих случаях.
+\end{block}
+
+\end{frame}
+
+%-----------------------------------------------------------------------------------------
+%-----------------------------------------------------------------------------------------
+\section{Оптимизация существующего анализа}
+%-----------------------------------------------------------------------------------------
+
+\begin{frame}
+\frametitle{Оптимизация и результат}
+
+\begin{block}{Оптимизация обхода ветвлений в управляющем графе}
+Хотелось модифицировать обход графа управления применив некоторые идеи из Steensgaard’s algorithm, чтобы уменьшить число путей, которые обходит анализ для построения результата.
+\end{block}
+
+\begin{block}{Полученное ускорение}
+К сожалению модифицированный обход не дал большого выигрыша на тестовых примерах.  
+\end{block}
+
+\end{frame}
+
+%----------------------------------------------------------------------------------------
+
+\begin{frame}
+\frametitle{Оптимизация и результат}
+
 \begin{block}{Оптимизация межпроцедурного анализа}
-Сильно сократила число повторных анализов.
+Полноценная реализация построения частично транзитивных функций имела значительную трудоёмкость, поэтому было принято решение вначале реализовать простое кэширование результата для одних и тех же контекстов вызова функции.
+\end{block}
+
+\begin{block}{Полученное ускорение}
+
 \end{block}
 
 \end{frame}
