--- a/presentation_1.tex
+++ b/presentation_1.tex
@@ -154,6 +154,7 @@
 \begin{frame}
 \frametitle{Постановка задачи}
 \begin{itemize}
+  \item \textbf{Изучить существующие подходы к анализу псевдонимов.} 
   \item \textbf{Обнаружить узкие места в существующей реализации анализа псевдонимов.} 
   \item \textbf{Модифицировать существующие алгоритмы для ускорения анализа.} 
   \item \textbf{Протестировать работу новой реализации анализа.} 
@@ -202,7 +203,7 @@ Cтатически (на этапе компиляции) определить 
 %-----------------------------------------------------------------------------------------
 
 \begin{frame}
-\frametitle{Классификация анализов}
+\frametitle{Классификация анализов псевдонимов}
 
 \begin{block}{context-sensitive / context-insensitive}
 Чувствительность к параметрам вызова анализируемой функции/процедуры.
@@ -213,11 +214,11 @@ Cтатически (на этапе компиляции) определить 
 \end{block}
 
 \begin{block}{field-sensitive / field-insensitive}
-Различение разных полей структуры.
+Способность различать разные поля структур.
 \end{block}
 
 \begin{block}{type-based / flow-based}
-Анализ основан на анализе типов (для языков вроде Haskell или Java) или на анализе потока управления программы (для языков со ссылками и приведением типов).
+Основанный на анализе типов (для языков вроде Haskell или Java) или на анализе потока управления программы (для языков со ссылками и приведением типов).
 \end{block}
 
 \end{frame}
@@ -229,7 +230,7 @@ Cтатически (на этапе компиляции) определить 
 
 \begin{enumerate}
 \item BasicAA -- Основной анализ использующийся в LLVM
-\item Steensgaard’s algorithm -- Алгоритм межпроцедурный анализа с хорошей скоростью работы, но с большим числом упрощений.
+\item Steensgaard’s algorithm -- Алгоритм межпроцедурного анализа с хорошей скоростью работы, но с большим числом упрощений.
 \item Partial Transfer Functions -- Подход к анализу, который строит отображения из контекста вызова в контекст после вызова функции.
 \end{enumerate}
 
@@ -245,7 +246,7 @@ Cтатически (на этапе компиляции) определить 
 \frametitle{Существующий анализ псевдонимов в ОРС}
 
 \begin{block}{}
-Существующий в ОРС анализ псевдонимов осуществляет для каждой процедуры обход факторизованного графа потока управления с накоплением результатов анализа и анализирует вызовы функций для каждого контекста отдельно.
+Существующий в ОРС анализ псевдонимов осуществляет для каждой функции обход факторизованного графа потока управления с накоплением результатов анализа и анализирует вызовы функций для каждого контекста отдельно.
 \end{block}
 
 \begin{block}{По классификации}
@@ -270,7 +271,7 @@ Cтатически (на этапе компиляции) определить 
 В случаях, когда в процедуре имелось множество расходящихся и сходящихся веток полный обход всех путей от входа до выхода занимает значительное время.
 \end{block}
 
-\begin{block}{В интерпроцедурной части анализа}
+\begin{block}{В межпроцедурной части анализа}
 Существующий алгоритм производит детальный анализ для каждого места вызова функции, что оказывается излишним во многих случаях.
 \end{block}
 
@@ -300,7 +301,7 @@ Cтатически (на этапе компиляции) определить 
 \frametitle{Оптимизация и результат}
 
 \begin{block}{Оптимизация межпроцедурного анализа}
-Полноценная реализация построения частично транзитивных функций имела значительную трудоёмкость, поэтому было принято решение вначале реализовать простое кэширование результата для одних и тех же контекстов вызова функции.
+Полноценная реализация построения частично трансферных функций имела значительную трудоёмкость, поэтому было принято решение сначала реализовать простое кэширование результата для одних и тех же контекстов вызова функции.
 \end{block}
 
 \begin{block}{Полученное ускорение}
