--- a/presentation_1.tex
+++ b/presentation_1.tex
@@ -154,10 +154,10 @@
 \begin{frame}
 \frametitle{Постановка задачи}
 \begin{itemize}
-  \item \textbf{Изучить существующие подходы к анализу псевдонимов.} 
-  \item \textbf{Обнаружить узкие места в существующей реализации анализа псевдонимов.} 
+  \item \textbf{Изучить существующие подходы к анализу псевдонимов.}
+  \item \textbf{Исследовать возможности ускорения существующей реализации анализа псевдонимов.}  % Обнаружить узкие места в существующей реализации анализа псевдонимов.
   \item \textbf{Модифицировать существующие алгоритмы для ускорения анализа.} 
-  \item \textbf{Протестировать работу новой реализации анализа.} 
+  \item \textbf{Протестировать работу новой реализации анализа и сравнить производительность.} 
 \end{itemize}
 \end{frame}
 
@@ -278,9 +278,6 @@ Cтатически (на этапе компиляции) определить 
 \end{frame}
 
 %-----------------------------------------------------------------------------------------
-%-----------------------------------------------------------------------------------------
-\section{Оптимизация существующего анализа}
-%-----------------------------------------------------------------------------------------
 
 \begin{frame}
 \frametitle{Оптимизация и результат}
@@ -307,6 +304,30 @@ Cтатически (на этапе компиляции) определить 
 \begin{block}{Полученное ускорение}
 
 \end{block}
+
+\end{frame}
+
+%----------------------------------------------------------------------------------------
+
+\begin{frame}
+\frametitle{Оптимизация и результат}
+
+\begin{table}
+\begin{tabular}{l | c | c | c | c }
+Бенчмарк & Old & Meshing & Cache & Both \\
+\hline \hline
+linpack & 193 & 189 & 183 & 183 \\ 
+md & 46 & 44 & 44 & 38\\
+whetstone & 81 & 78 & 79 & 76\\
+smith & 211 & 117 & 58 & 114\\
+revrina & 191 & 192 & 60 & 61\\
+lbm & 446 & 4474 & 286 & 4490\\
+hirschberg & 604 & 570 & 48 & 49\\
+hirschberg2 & 104 & 103 & 34 & 33\\
+quagga & 23 & 6 & 22 & 6
+\end{tabular}
+\caption{Triathlon results}
+\end{table}
 
 \end{frame}
 
