--- a/presentation_1.tex
+++ b/presentation_1.tex
@@ -167,19 +167,30 @@
 %-----------------------------------------------------------------------------------------
 
 \begin{frame}
-\frametitle{Определение}
+\frametitle{Определения}
 
 \begin{block}{Псевдонимы / Алиасы}
 Два указателя a и b будем называть псевдонимами, если они указывают на одну и ту же область памяти.
 \end{block}
 
+\begin{block}{Контекст}
+Контекстом вызова процедуры -- информация о взаимоотношение между всеми всеми указателями, которые находятся в области видимости данной процедуры при вызове её из данного места.
+\end{block}
+
+\end{frame}
+
+%-----------------------------------------------------------------------------------------
+
+\begin{frame}
+\frametitle{Для чего анализ псевдонимов используется}
+
 \begin{block}{Цель анализа}
-Cтатически (на этапе компиляции) определить для каждой пары указателей и, возможно, контекста, что они
+Cтатически (на этапе компиляции) определить для каждой пары указателей и, возможно, контекста, что
 \begin{itemize}
-\item всегда указывают в одну и ту же память (MustAlias)
-\item объекты, на которые они указывают пересекаются в памяти, но начинаются не с одного адреса (PartialAlias)
-\item могут указывать в одну область памяти (MayAlias)
-\item всегда указывают в разные области памяти (NoAlias)
+\item они всегда указывают в одну и ту же память -- $MustAlias$.
+\item объекты, на которые они указывают пересекаются в памяти, но начинаются с различных адресов -- $PartialAlias$.
+\item они могут указывать в одну область памяти -- $MayAlias$.
+\item они всегда указывают в разные области памяти -- $NoAlias$.
 \end{itemize}
 \end{block}
 
@@ -188,14 +199,16 @@ Cтатически (на этапе компиляции) определить 
 %-----------------------------------------------------------------------------------------
 
 \begin{frame}
-\frametitle{Почему анализ псевдонимов важен}
+\frametitle{Для чего анализ псевдонимов используется}
 
 \begin{block}{Для уточнения других анализов}
 Результаты некоторых анализов можно уточнить, если знать взаимоотношения между данными, которые участвуют в анализе.
+% example: анализ FrameDataSpecification - определение объема требуемой памяти. Если какой-то указатель всегда псевдоним, то и анализировать его не нужно.
 \end{block}
 
 \begin{block}{Для проверки выполнения предусловий применения преобразований}
 У некоторых преобразований есть предусловия связанные с псевдонимами, которые разрешают применять их только если какие-то указатели точно псевдонимы или точно не псевдонимы.
+% example: разрезание цикла или развертка и/или если два указателя всегда точно псевдонимы, то можно один заменить на второй и первый выкинуть.
 \end{block}
 
 \end{frame}
@@ -214,11 +227,11 @@ Cтатически (на этапе компиляции) определить 
 \end{block}
 
 \begin{block}{field-sensitive / field-insensitive}
-Способность различать разные поля структур.
+Способность различать разные поля одной структуры.
 \end{block}
 
 \begin{block}{type-based / flow-based}
-Основанный на анализе типов (для языков вроде Haskell или Java) или на анализе потока управления программы (для языков со ссылками и приведением типов).
+Основанный на анализе типов или на анализе потока управления программы.
 \end{block}
 
 \end{frame}
@@ -267,12 +280,12 @@ Cтатически (на этапе компиляции) определить 
 В существующем анализе было обнаружено два потенциальных места ускорения:
 \end{block}
 
-\begin{block}{В интропроцедурной части анализа}
-В случаях, когда в процедуре имелось множество расходящихся и сходящихся веток полный обход всех путей от входа до выхода занимает значительное время.
+\begin{block}{В процедурной части анализа}
+В случаях, когда в функции имеется множество расходящихся и сразу же сходящихся веток полный обход всех путей от входа до выхода занимает значительное время.
 \end{block}
 
 \begin{block}{В межпроцедурной части анализа}
-Существующий алгоритм производит детальный анализ для каждого места вызова функции, что оказывается излишним во многих случаях.
+Существующий алгоритм производит детальный анализ для каждого места вызова функции, что оказывается излишним в случае, если контекст вызовов не меняется.
 \end{block}
 
 \end{frame}
@@ -283,11 +296,11 @@ Cтатически (на этапе компиляции) определить 
 \frametitle{Оптимизация и результат}
 
 \begin{block}{Оптимизация обхода ветвлений в управляющем графе}
-Хотелось модифицировать обход графа управления применив некоторые идеи из Steensgaard’s algorithm, чтобы уменьшить число путей, которые обходит анализ для построения результата.
+Обход графа управления был модифицирован с применением некоторых идей из Steensgaard’s algorithm, чтобы уменьшить число путей, которые обходит анализ для построения результата.
 \end{block}
 
 \begin{block}{Полученное ускорение}
-К сожалению модифицированный обход не дал большого выигрыша на тестовых примерах.  
+К сожалению, модифицированный обход не дал большого выигрыша на имеющихся бенчмарках, а на одном из них дал существенное замедление.
 \end{block}
 
 \end{frame}
@@ -302,7 +315,7 @@ Cтатически (на этапе компиляции) определить 
 \end{block}
 
 \begin{block}{Полученное ускорение}
-
+Для тестов небольших размеров скорость построения результата анализа почти не изменилась, но на достаточно сложных бенчмарках скорость удвоилась.
 \end{block}
 
 \end{frame}
@@ -312,22 +325,30 @@ Cтатически (на этапе компиляции) определить 
 \begin{frame}
 \frametitle{Оптимизация и результат}
 
+\begin{block}{}
+
 \begin{table}
 \begin{tabular}{l | c | c | c | c }
-Бенчмарк & Old & Meshing & Cache & Both \\
+Бенчмарк & Исходная реализация & Слияние & Кэширование & Оба \\
 \hline \hline
-linpack & 193 & 189 & 183 & 183 \\ 
-md & 46 & 44 & 44 & 38\\
-whetstone & 81 & 78 & 79 & 76\\
-smith & 211 & 117 & 58 & 114\\
-revrina & 191 & 192 & 60 & 61\\
-lbm & 446 & 4474 & 286 & 4490\\
-hirschberg & 604 & 570 & 48 & 49\\
-hirschberg2 & 104 & 103 & 34 & 33\\
+linpack & 193 & 189 & 184 & 183 \\
+md & 46 & 44 & 40 & 40\\ 
+whetstone & 81 & 78 & 75 & 76\\
+smith & 211 & 117 & 98 & 97\\
+revrina & 191 & 192 & 67 & 68\\
+lbm & 446 & 4474 & 341 & 4490\\
+hirschberg & 604 & 570 & 309 & 306\\
+hirschberg2 & 104 & 103 & 50 & 51\\
 quagga & 23 & 6 & 22 & 6
 \end{tabular}
-\caption{Triathlon results}
 \end{table}
+Среднее время работы на 20 запусках в миллисекундах.
+\end{block}
+
+\begin{block}{Тестовое окружение}
+g++ 4.9.2, Ubuntu 15.04.\\
+Intel(R) Core(TM) i7-4700MQ CPU @ 2.4 GHz (Up to 3.4 GHz)
+\end{block}
 
 \end{frame}
 
