--- a/presentation_1.tex
+++ b/presentation_1.tex
@@ -241,13 +241,17 @@ Cтатически (на этапе компиляции) определить 
 \begin{frame}
 \frametitle{Рассмотренные подходы к анализу псевдонимов}
 
+\begin{block}{}
 \begin{enumerate}
 \item BasicAA -- Основной анализ использующийся в LLVM
 \item Steensgaard’s algorithm -- Алгоритм межпроцедурного анализа с хорошей скоростью работы, но с большим числом упрощений.
 \item Partial Transfer Functions -- Подход к анализу, который строит отображения из контекста вызова в контекст после вызова функции.
 \end{enumerate}
+\end{block}
 
+\begin{block}{}
 При наличии в компиляторе нескольких реализаций анализа, они могут использоватся по цепочке для построения общего неточного результата и уточнения критичных частей.
+\end{block}
 \end{frame}
 
 %-----------------------------------------------------------------------------------------
