Update on Overleaf.

--- a/presentation_1.tex
+++ b/presentation_1.tex
@@ -182,7 +182,7 @@
 %-----------------------------------------------------------------------------------------
 
 \begin{frame}
-\frametitle{Для чего анализ псевдонимов используется}
+\frametitle{Использование}
 
 \begin{block}{Цель анализа}
 Cтатически (на этапе компиляции) определить для каждой пары указателей и, возможно, контекста, что
@@ -199,7 +199,7 @@ Cтатически (на этапе компиляции) определить 
 %-----------------------------------------------------------------------------------------
 
 \begin{frame}
-\frametitle{Для чего анализ псевдонимов используется}
+\frametitle{Применение}
 
 \begin{block}{Для уточнения других анализов}
 Результаты некоторых анализов можно уточнить, если знать взаимоотношения между данными, которые участвуют в анализе.
@@ -239,7 +239,7 @@ Cтатически (на этапе компиляции) определить 
 %-----------------------------------------------------------------------------------------
 
 \begin{frame}
-\frametitle{Рассмотренные подходы к анализу псевдонимов}
+\frametitle{Известные подходы к анализу псевдонимов}
 
 \begin{block}{}
 \begin{enumerate}
