--- a/presentation_1.tex
+++ b/presentation_1.tex
@@ -83,6 +83,7 @@
 \usepackage[T2A]{fontenc}
 \usepackage[russian,english]{babel}
 
+%\usepackage[table]{xcolor}
 
 \setbeamertemplate{navigation symbols}{} % To remove the navigation symbols from the bottom of all slides uncomment this line
 
@@ -182,7 +183,7 @@
 %-----------------------------------------------------------------------------------------
 
 \begin{frame}
-\frametitle{Использование}
+\frametitle{Для чего анализ псевдонимов используется}
 
 \begin{block}{Цель анализа}
 Cтатически (на этапе компиляции) определить для каждой пары указателей и, возможно, контекста, что
@@ -199,7 +200,7 @@ Cтатически (на этапе компиляции) определить 
 %-----------------------------------------------------------------------------------------
 
 \begin{frame}
-\frametitle{Применение}
+\frametitle{Для чего анализ псевдонимов используется}
 
 \begin{block}{Для уточнения других анализов}
 Результаты некоторых анализов можно уточнить, если знать взаимоотношения между данными, которые участвуют в анализе.
@@ -239,7 +240,7 @@ Cтатически (на этапе компиляции) определить 
 %-----------------------------------------------------------------------------------------
 
 \begin{frame}
-\frametitle{Известные подходы к анализу псевдонимов}
+\frametitle{Рассмотренные подходы к анализу псевдонимов}
 
 \begin{block}{}
 \begin{enumerate}
@@ -339,11 +340,11 @@ linpack & 193 & 189 & 184 & 183 \\
 md & 46 & 44 & 40 & 40\\ 
 whetstone & 81 & 78 & 75 & 76\\
 smith & 211 & 117 & 98 & 97\\
-revrina & 191 & 192 & 67 & 68\\
-lbm & 446 & 4474 & 341 & 4490\\
-hirschberg & 604 & 570 & 309 & 306\\
-hirschberg2 & 104 & 103 & 50 & 51\\
-quagga & 23 & 6 & 22 & 6
+revrina & 191 & 192 & \textcolor{green}{67} & 68\\
+lbm & 446 & \textcolor{red}{4474} & 341 & 4490\\
+hirschberg & 604 & 570 & \textcolor{green}{309} & 306\\
+hirschberg2 & 104 & 103 & \textcolor{green}{50} & 51\\
+quagga & 23 & \textcolor{green}{6} & 22 & 6
 \end{tabular}
 \end{table}
 Среднее время работы на 20 запусках в миллисекундах.
