--- a/presentation_1.tex
+++ b/presentation_1.tex
@@ -83,8 +83,6 @@
 \usepackage[T2A]{fontenc}
 \usepackage[russian,english]{babel}
 
-%\usepackage[table]{xcolor}
-
 \setbeamertemplate{navigation symbols}{} % To remove the navigation symbols from the bottom of all slides uncomment this line
 
 
@@ -183,7 +181,7 @@
 %-----------------------------------------------------------------------------------------
 
 \begin{frame}
-\frametitle{Для чего анализ псевдонимов используется}
+\frametitle{Использование}
 
 \begin{block}{Цель анализа}
 Cтатически (на этапе компиляции) определить для каждой пары указателей и, возможно, контекста, что
@@ -200,7 +198,7 @@ Cтатически (на этапе компиляции) определить 
 %-----------------------------------------------------------------------------------------
 
 \begin{frame}
-\frametitle{Для чего анализ псевдонимов используется}
+\frametitle{Применение}
 
 \begin{block}{Для уточнения других анализов}
 Результаты некоторых анализов можно уточнить, если знать взаимоотношения между данными, которые участвуют в анализе.
@@ -268,7 +266,7 @@ Cтатически (на этапе компиляции) определить 
 \end{block}
 
 \begin{block}{По классификации}
-Анализ псевдонимов в ОРС context-insensitive, flow-sensitive, field-sensitive (по умолчанию. Может быть и field-insensitive), flow-based.
+Анализ псевдонимов в ОРС context-sensitive, flow-sensitive, field-sensitive (по умолчанию. Может быть и field-insensitive), flow-based.
 \end{block}
 
 \end{frame}
@@ -336,15 +334,15 @@ Cтатически (на этапе компиляции) определить 
 \begin{tabular}{l | c | c | c | c }
 Бенчмарк & Исходная реализация & Слияние & Кэширование & Оба \\
 \hline \hline
-linpack & 193 & 189 & 184 & 183 \\
-md & 46 & 44 & 40 & 40\\ 
-whetstone & 81 & 78 & 75 & 76\\
-smith & 211 & 117 & 98 & 97\\
-revrina & 191 & 192 & \textcolor{green}{67} & 68\\
-lbm & 446 & \textcolor{red}{4474} & 341 & 4490\\
-hirschberg & 604 & 570 & \textcolor{green}{309} & 306\\
-hirschberg2 & 104 & 103 & \textcolor{green}{50} & 51\\
-quagga & 23 & \textcolor{green}{6} & 22 & 6
+linpack     & 193 & 189                    & 184                    & 183 \\
+md          & 46  & 44                     & 40                     & 40\\ 
+whetstone   & 81  & 78                     & 75                     & 76\\
+smith       & 211 & \textcolor{green}{117} & \textcolor{green}{98}  & 97\\
+revrina     & 191 & 192                    & \textcolor{green}{67}  & 68\\
+lbm         & 446 & \textcolor{red}{4474}  & 341                    & 4490\\
+hirschberg  & 604 & 570                    & \textcolor{green}{309} & 306\\
+hirschberg2 & 104 & 103                    & \textcolor{green}{50}  & 51\\
+quagga      & 23  & \textcolor{green}{6}   & 22                     & 6
 \end{tabular}
 \end{table}
 Среднее время работы на 20 запусках в миллисекундах.
