--- a/presentation_1.tex
+++ b/presentation_1.tex
@@ -336,8 +336,9 @@ Cтатически (на этапе компиляции) определить 
 \hline \hline
 linpack     & 193 & 189                    & 184                    & 183 \\
 md          & 46  & 44                     & 40                     & 40\\ 
-whetstone   & 81  & 78                     & 75                     & 76\\
+%whetstone   & 81  & 78                     & 75                     & 76\\
 smith       & 211 & \textcolor{green}{117} & \textcolor{green}{98}  & 97\\
+gazaryan    & 249 & 260                    & \textcolor{green}{92}  & 96\\
 revrina     & 191 & 192                    & \textcolor{green}{67}  & 68\\
 lbm         & 446 & \textcolor{red}{4474}  & 341                    & 4490\\
 hirschberg  & 604 & 570                    & \textcolor{green}{309} & 306\\
