--- a/presentation_1.tex
+++ b/presentation_1.tex
@@ -162,7 +162,7 @@
 
 %-----------------------------------------------------------------------------------------
 %-----------------------------------------------------------------------------------------
-\section{Введение}
+\section{Подходы к анализу псевдонимов}
 %-----------------------------------------------------------------------------------------
 
 \begin{frame}
